// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Large 1`] = `
Array [
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_copy icon_size_large"
    />
  </span>,
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_logo icon_size_large"
    />
  </span>,
]
`;

exports[`Storyshots Icon Medium 1`] = `
Array [
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_copy icon_size_medium"
    />
  </span>,
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_logo icon_size_medium"
    />
  </span>,
]
`;

exports[`Storyshots Icon Small 1`] = `
Array [
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_copy icon_size_small"
    />
  </span>,
  <span
    style={
      Object {
        "margin": "4px",
      }
    }
  >
    <span
      className="icon icon_name_logo icon_size_small"
    />
  </span>,
]
`;
